<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uz.iutlab.assignment3.MainActivity"
    android:layout_margin="16dp"
    >


    <TextView
        android:id="@+id/loggedAsXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_as"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_products"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="3dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"

        >


        <ListView
            android:id="@+id/productsListXML"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            >
        </ListView>

        <Button
            android:id="@+id/buyButtonXML"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/buy"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

    </LinearLayout>


</LinearLayout>
